# jupyterlite-pyodide-build

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh  build_docker.sh  build_jupyter.sh  build_pyodide_modules.sh  clean.sh  docker_wsl_install.sh  envs.sh  get_built_pyodide.sh  jupyter-lite.json  run_docker.sh  run_make.sh  set_docker_id.sh
.github/workflows/: clear-caches.yml  docker-image.yml
api/contents/: all.json
docs/: .jupyterlite.doit.db  jupyter-lite.json
docs/.cache/wheels/: pyolite-0.1.0b7-py3-none-any.whl.meta.json
docs/_output/: jupyter-lite.json
docs/_output/files/: liquidity-analysis.ipynb  technical-analysis.ipynb
docs/_output/lab/: jupyter-lite.json
docs/_output/pypi/: all.json  pyolite-0.1.0b7-py3-none-any.whl
docs/_output/retro/: jupyter-lite.json
docs/_output/retro/consoles/: jupyter-lite.json
docs/_output/retro/edit/: jupyter-lite.json
docs/api/contents/: all.json
docs/extensions/jupyter-matplotlib/: package.json
docs/extensions/jupyterlab-myst/: package.json
docs/files/: getting-started.ipynb  interactive-charts.ipynb  plotting.ipynb  price-impact.ipynb
docs/pypi/: all.json  pyolite-0.1.0b7-py3-none-any.whl
docs/static/pyodide/: Jinja2-3.1.1-py3-none-any.whl  Logbook-1.5.3-cp310-cp310-emscripten_wasm32.whl  MarkupSafe-2.1.1-cp310-cp310-emscripten_wasm32.whl  PIL-9.1.0-cp310-cp310-emscripten_wasm32.whl  PyWavelets-1.3.0-cp310-cp310-emscripten_wasm32.whl  PyYAML-6.0-cp310-cp310-emscripten_wasm32.whl  Pygments-2.11.2-py3-none-any.whl  SQLAlchemy-1.4.35-cp310-cp310-emscripten_wasm32.whl  asciitree-0.3.3-py3-none-any.whl  atomicwrites-1.4.0-py2.py3-none-any.whl  attrs-21.4.0-py2.py3-none-any.whl  autograd-1.4-py3-none-any.whl  autograd-tests.tar  b2d-0.7.2-cp310-cp310-emscripten_wasm32.whl  beautifulsoup4-4.11.0-py3-none-any.whl  biopython-1.79-cp310-cp310-emscripten_wasm32.whl  bleach-5.0.0-py3-none-any.whl  boost_histogram-1.3.1-cp310-cp310-emscripten_wasm32.whl  certifi-2021.10.8-py2.py3-none-any.whl  certifi-2022.5.18.1-py3-none-any.whl  certifi-2022.6.15-py3-none-any.whl  cffi-1.15.0-cp310-cp310-emscripten_wasm32.whl  cffi_example-0.1-cp310-cp310-emscripten_wasm32.whl  charset_normalizer-2.0.12-py3-none-any.whl  chart_studio-1.1.0-py3-none-any.whl  click-8.1.3-py3-none-any.whl  cloudpickle-2.0.0-py3-none-any.whl  cmyt-1.0.4-py3-none-any.whl  cmyt-tests.tar  colorlover-0.3.0-py3-none-any.whl  colorspacious-1.1.2-py2.py3-none-any.whl  cryptography-3.4.8-cp310-cp310-emscripten_wasm32.whl  cssselect-1.1.0-py2.py3-none-any.whl  cufflinks-0.17.3-py3-none-any.whl  cufflinks-0.17.4-py3-none-any.whl  cycler-0.11.0-py3-none-any.whl  cytoolz-0.11.2-cp310-cp310-emscripten_wasm32.whl  cytoolz-tests.tar  dataclasses-0.8-py3-none-any.whl  dataclasses_json-0.5.7-py3-none-any.whl  (+120 more)
extensions/@agoose77/jupyterlab-markup/: package.json
extensions/@retrolab/lab-extension/: package.json
extensions/bqplot/: package.json
extensions/bqplot/static/: 568.cafb2a13cdb349788505.js  remoteEntry.40d7ace9569529c50584.js
extensions/jupyter-cytoscape/static/: 703.d14ab686b9ecd0c98e57.js
extensions/jupyter-matplotlib/static/: remoteEntry.6a761b1842f6f2e31f74.js
extensions/jupyterlab-kernelspy/: package.json
extensions/jupyterlab-kernelspy/static/: 255.da444b020dd6358032a7.js  534.e6ec1fd1663387f49e7b.js
extensions/jupyterlab-myst/static/: 235.894fa35e64e10915e858.js  658.ef2ca6d1fd8af5f1a71f.js  798.cf1bae1d2b4764923581.js
files/: pairs.ipynb
generated_site/api/contents/: all.json
generated_site/extensions/jupyter-cytoscape/: package.json
generated_site/static/pyodide/: jedi-tests.tar  joblib-tests.tar  networkx-tests.tar  zarr-tests.tar
jupyter-build/: .gitignore  build.sh
jupyter-build/override_addon/: pyproject.toml
jupyter-build/static/pyodide/: autograd-tests.tar  matplotlib-tests.tar  nltk-tests.tar  numcodecs-tests.tar  pyodide_py.tar
jupyter-src/: .gitignore  fetch_service.js  requirements.txt
jupyter-src/contents/: interactive-charts.ipynb
jupyter-src/files/: getting-started.ipynb  interactive-charts.ipynb  pool-liquidity.ipynb
jupyter-src/override_addon/override_addon/: __init__.py
jupyter-src/overrides/: fetch_service.js
jupyter-src/overrides/lab/: index.html
jupyter-src/static/pyodide/: distutils.tar  packages.json  pyerfa-tests.tar  pyodide.asm.js  scikit-image-tests.tar  seaborn-tests.tar  sqlalchemy-tests.tar  trading-strategy-tests.tar
notebook-webcomponent/notebook/: index.html
override_addon/override_addon/: __init__.py
patches/: pyodide-build.patch
pyodide_meta/pyarrow/: meta.yaml  meta.yaml.in
pyodide_meta/requests/: meta.yaml  meta.yaml.in
pyodide_meta/trading-strategy/: meta.yaml  meta.yaml.in
pyolite/: patches.py
static/pyodide/: certifi-2022.6.15-py3-none-any.whl  certifi-2022.9.14-py3-none-any.whl  charset_normalizer-2.0.12-py3-none-any.whl  charset_normalizer-2.1.1-py3-none-any.whl  chart_studio-1.1.0-py3-none-any.whl  colorlover-0.3.0-py3-none-any.whl  cufflinks-0.17.3-py3-none-any.whl  cytoolz-tests.tar  dataclasses_json-0.5.7-py3-none-any.whl  distutils.tar  eth_hash-0.3.3-py3-none-any.whl  eth_typing-2.3.0-py3-none-any.whl  eth_utils-1.10.0-py3-none-any.whl  fastjsonschema-2.16.1-py3-none-any.whl  fastjsonschema-2.16.2-py3-none-any.whl  idna-3.3-py3-none-any.whl  idna-3.4-py3-none-any.whl  jsonlines-3.1.0-py3-none-any.whl  jsonschema-4.15.0-py3-none-any.whl  jsonschema-4.16.0-py3-none-any.whl  jsonschema-4.6.2-py3-none-any.whl  jsonschema-4.9.1-py3-none-any.whl  jupyter_core-4.11.1-py3-none-any.whl  marshmallow-3.17.0-py3-none-any.whl  marshmallow-3.17.1-py3-none-any.whl  marshmallow-3.18.0-py3-none-any.whl  marshmallow_enum-1.5.1-py2.py3-none-any.whl  mne-tests.tar  mplfinance-0.12.9b1-py3-none-any.whl  mpmath-tests.tar  mypy_extensions-0.4.3-py2.py3-none-any.whl  nbformat-5.4.0-py3-none-any.whl  nbformat-5.5.0-py3-none-any.whl  numpy-1.22.3-cp310-cp310-emscripten_wasm32.whl  optlang-tests.tar  packages.json  plotly-tests.tar  pycryptodome-3.15.0-cp35-abi3-emscripten_wasm32.whl  pycryptodome-tests.tar  pyodide.asm.js  (+17 more)
(+105 files in other folders)
